# rust-strictmath

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs  strict_math.rs
src/fdlibm/: fdlibm.h  rfdlibm.h  s_cbrt.c
tests/: test_strict_math.rs
